# LSIMENGINE

./: .gitignore  CMakeLists.txt  README.md  website.dsp
.github/workflows/: generateStructureTree.yml
Src/: EBO.cpp  VAO.cpp  VAO.h  VBO.cpp  camera.cpp  camera.h  default.vert  fileIO.cpp  gui.cpp  inputs.cpp  main.cpp  mesh.cpp  primitives.cpp  shaderClass.cpp  terrain.cpp
Src/geometry/: mesh.cpp  model.cpp  primitives.cpp  terrain.cpp
Src/gl/: EBO.cpp  VAO.cpp  VBO.cpp  shaderClass.cpp
Src/inputs/: gui.cpp  inputs.cpp
Src/scene/: camera.cpp
Src/utils/: fileIO.cpp  json.cpp  texture.cpp
Src/utils/logging/: log.cpp
Website/LSIMdocs/: 001welcome.md  002gettingStarted.md  003fixingLauncherIssues.md  004theBasics.md  005movement.md  006transformations.md  007creations.md  008textures.md  009fileIO.md  010goingFurther.md  011workingWithConfigs.md  012logger.md  013fileIO.md  014otherSystems.md  015primitives.md  016mesh.md  017light.md  018gui.md  019inputs.md  020texture.md  021programmingYourGame.md  022exampleGame.md  023theEnd.md
Website/Src/docs/: LSIMdocs.h
Website/Src/styles/: LSIMENGINE_Styles.css.h
config/: config.json
include/: EBO.h  LSIMtypes.h  VBO.h  camera.h  fileIO.h  gui.h  inputs.h  mesh.h  primitives.h  scene.h  shaderClass.h  terrain.h
include/geometry/: mesh.h  model.h  primitives.h  terrain.h
include/gl/: EBO.h  VAO.h  VBO.h  shaderClass.h
include/inputs/: gui.h  inputs.h
include/scene/: camera.h  light.h  scene.h  script.h
include/utils/: defaults.h  fileIO.h  json.h  meshPicking.h  texture.h
include/utils/logging/: log.h
shaders/: default.frag  default.geom  default.vert
